# nfl-play-by-play

./: .gitignore  CLAUDE.md  README.md  consume_stream.py  docker-compose.yml  pyproject.toml  requirements.txt  stream_sim.py  train.py
.claude/commands/: predict-espn.md  test-espn.md
config/: settings.py
dags/: build_features_dag.py
data/features/: features_2023.parquet  play_by_play_2023.parquet
data/labels/: play_by_play_2023.parquet
docker/airflow/: README.md  docker-compose.yaml
docker/airflow/dags/: build_features_dag.py  build_labels_dag.py
scripts/: pull_data.sh
src/features/: core.py  play_by_play.py
src/notebooks/: build_features.py  build_labels.py  espn_derive_features.py  model_accuracy_metrics.py  predict_live_espn.py  train.py
src/pipelines/: build_features.py  build_labels.py  espn_derive_features.py  model_accuracy_metrics.py  predict_live.py  predict_live_espn.py  stream_sim.py  train.py
src/play_by_play/config/: settings.py
src/play_by_play/ml/: features.py  labels.py  util.py
src/play_by_play/notebooks/: backprop.py  build_features.py  build_labels.py  espn_derive_features.py  explore.py  explore_nn.py  explore_rf.py  model_accuracy_metrics.py  predict_live.py  predict_live_espn.py  train.py
src/play_by_play/pipelines/: build_features.py  build_labels.py  espn_derive_features.py  model_accuracy_metrics.py  predict_live.py  stream_sim.py  (+2 more)
src/streaming_notebooks/: predict_live.py  stream_sim.py
src/tests/: README.md  conftest.py  test_espn_api.py
src/utils/: espn_api_util.py  model_util.py
study/: backprop.py  xor.py
(+1 files in other folders)
